--- a/GymFlow/src/assets/css/style.css
+++ b/GymFlow/src/assets/css/style.css
@@ -14,8 +14,8 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
-  background: #f6f9ff;
+  font-family: "Raleway", sans-serif;
+  background: #010000;
   color: #444444;
 }
 
@@ -35,7 +35,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Nunito", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -64,7 +64,7 @@ h6 {
   font-size: 24px;
   margin-bottom: 0;
   font-weight: 600;
-  color: #012970;
+  color: #f6f9ff;
 }
 
 /*--------------------------------------------------------------
@@ -77,7 +77,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: #4154f1;
+  background: #f6f9ff;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -91,7 +91,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #6776f4;
+  background: #ffffff;
   color: #fff;
 }
 
@@ -131,7 +131,7 @@ h6 {
 }
 
 .dropdown-menu .dropdown-divider {
-  color: #a5c5fe;
+  color: #ffffff;
   margin: 0;
 }
 
@@ -182,8 +182,8 @@ h6 {
 
 /* Light Backgrounds */
 .bg-primary-light {
-  background-color: #cfe2ff;
-  border-color: #cfe2ff;
+  background-color: #ffffff;
+  border-color: #ffffff;
 }
 
 .bg-secondary-light {
@@ -228,16 +228,17 @@ h6 {
 .card-footer {
   border-color: #ebeef4;
   background-color: #fff;
-  color: #798eb3;
+  color: #ffffff;
   padding: 15px;
+
 }
 
 .card-title {
   padding: 20px 0 15px 0;
   font-size: 18px;
   font-weight: 500;
-  color: #012970;
-  font-family: "Poppins", sans-serif;
+  color: #060000;
+  font-family: "Raleway", sans-serif;
 }
 
 .card-title span {
@@ -257,7 +258,7 @@ h6 {
 /* Alerts */
 .alert-heading {
   font-weight: 500;
-  font-family: "Poppins", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 20px;
 }
 
@@ -294,38 +295,38 @@ h6 {
 
 .accordion-flush .accordion-button:not(.collapsed) {
   box-shadow: none;
-  color: #4154f1;
+  color: #ffffff;
 }
 
 .accordion-flush .accordion-body {
   padding: 0 0 15px 0;
-  color: #3e4f6f;
+  color: #FFD700;
   font-size: 15px;
 }
 
 /* Breadcrumbs */
 .breadcrumb {
   font-size: 14px;
-  font-family: "Nunito", sans-serif;
-  color: #899bbd;
+  font-family: "Raleway", sans-serif;
+  color: #EFE902;
   font-weight: 600;
 }
 
 .breadcrumb a {
-  color: #899bbd;
+  color: #EFE902;
   transition: 0.3s;
 }
 
 .breadcrumb a:hover {
-  color: #51678f;
+  color: #EFE902;
 }
 
 .breadcrumb .breadcrumb-item::before {
-  color: #899bbd;
+  color: #EFE902;
 }
 
 .breadcrumb .active {
-  color: #51678f;
+  color: #EFE902;
   font-weight: 600;
 }
 
@@ -342,13 +343,13 @@ h6 {
 
 .nav-tabs-bordered .nav-link:hover,
 .nav-tabs-bordered .nav-link:focus {
-  color: #4154f1;
+  color: #EFE902;
 }
 
 .nav-tabs-bordered .nav-link.active {
   background-color: #fff;
-  color: #4154f1;
-  border-bottom: 2px solid #4154f1;
+  color: #EFE902;
+  border-bottom: 2px solid #EFE902;
 }
 
 /*--------------------------------------------------------------
@@ -372,8 +373,8 @@ h6 {
 .logo span {
   font-size: 26px;
   font-weight: 700;
-  color: #012970;
-  font-family: "Nunito", sans-serif;
+  color: #EFE902;
+  font-family: "Raleway", sans-serif;
 }
 
 .header {
@@ -1217,17 +1218,17 @@ h6 {
   padding: 20px 0;
   font-size: 14px;
   transition: all 0.3s;
-  border-top: 1px solid #cddfff;
+  border-top: 1px solid #FFD700;
 }
 
 .footer .copyright {
   text-align: center;
-  color: #012970;
+  color: #FFD700;
 }
 
 .footer .credits {
   padding-top: 5px;
   text-align: center;
   font-size: 13px;
-  color: #012970;
+  color: #FFD700;
 }
