--- a/GymFlow/src/assets/css/style.css
+++ b/GymFlow/src/assets/css/style.css
@@ -1231,3 +1231,183 @@ h6 {
   font-size: 13px;
   color: #012970;
 }
+
+/* Notificaciones*/
+.notificaciones {
+  max-width: 800px;
+  margin: 40px auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.notificacion {
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px; /* Agregado un espacio entre notificaciones */
+}
+.notificacion:last-child {
+  border-bottom: none;
+  margin-bottom: 0; /* Eliminado el espacio en la última notificación */
+}
+.notificacion .titulo {
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #337ab7;
+}
+.notificacion .descripcion {
+  font-size: 14px;
+  color: #666;
+}
+.notificacion .accion {
+  margin-top: 10px;
+}
+.notificacion .accion button {
+  margin-right: 10px;
+}
+.notificacion:hover {
+  background-color: #f7f7f7;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+/* Cambio de color de botón */
+.btn-primary {
+  background-color: #EDF939;
+  border-color: #EDF939;
+}
+.btn-primary:hover {
+  background-color: #F7DC6F;
+  border-color: #F7DC6F;
+}
+/* Estilos para los iconos de alerta */
+.alert-icon {
+  font-size: 24px;
+  margin-right: 10px;
+  color: #337ab7;
+}
+.alert-icon.warning {
+  color: #FFC107;
+}
+.alert-icon.danger {
+  color: #DC3545;
+}
+
+/*mensajes*/
+
+.chat-list {
+  background-color: #f7f7f7;
+  padding: 20px;
+  border-right: 1px solid #ddd;
+}
+
+.chat-list h2 {
+  margin-top: 0;
+}
+
+.chat-list ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.chat-list li {
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+.chat-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #337ab7;
+}
+
+.chat-link img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.chat-link span {
+  font-weight: bold;
+}
+
+.chat-container {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.chat-header {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+.chat-header img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.chat-header h2 {
+  margin: 0;
+  font-weight: bold;
+}
+
+.chat-messages {
+  padding: 20px;
+}
+
+.message {
+  margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 10px;
+  width: 80%;
+}
+
+.outgoing {
+  background-color: #DCF8C6;
+  margin-left: 20%;
+}
+
+.incoming {
+  background-color: #fff;
+  margin-right: 20%;
+}
+
+.timestamp {
+  font-size: 12px;
+  color: #999;
+  margin-top: 5px;
+}
+
+.chat-input {
+  padding: 10px;
+  border-top: 1px solid #ddd;
+}
+
+.chat-input input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+}
+
+.chat-input button {
+  background-color: #4CAF50;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
